@@ -30,7 +30,6 @@
 #include <string.h>
 #include <fcntl.h>
 #include <sys/ioctl.h>
-#include <sys/param.h>
 #include <errno.h>
 #include <ctype.h>
 #include <locale.h>
